Добавили css-nested, autoprefixer и svg-react-loader

--- a/src/containers/Header/style.css
+++ b/src/containers/Header/style.css
@@ -25,7 +25,7 @@
             width: 100%;
             height: 100%;
 
-            & img {
+            & svg {
               height: 80px;
               position: absolute;
               top: -5px;
@@ -62,12 +62,12 @@
                 &.phone {
                   margin-left: 20px;
 
-                  & img {
+                  & svg {
                     transform: rotate(45deg);
                   }
                 }
 
-                img {
+                svg {
                   width: 16px;
                   height: 16px;
                   position: absolute;
@@ -151,7 +151,7 @@
               margin-right: 80px;
             }
 
-            & img {
+            & svg {
               position: absolute;
               top: 0;
               bottom: 0;
