Добавил демо приложение из тестового задания для примера

--- a/src/containers/App/style.pcss
+++ b/src/containers/App/style.pcss
@@ -1,9 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
+@import url('https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,900');
+
+@import "../../public/css/variables.pcss";
 
 body {
-  font-family: 'Arial';
+  font-family: var(--text);
 }
 
 .app {
-  padding: 40px;
+  width: 820px;
+  margin: 40px auto;
+  font-family: var(--text);
+}
+
+.content {
+  width: 100%;
 }
