--- a/src/public/css/variables.pcss
+++ b/src/public/css/variables.pcss
@@ -1,12 +1,13 @@
 :root {
-    --width: 1280px;
-
-    /* colors */
-    --border-color: #eee;
-    --silver: #666;
+    --width: 870px;
 
     /* fonts */
-    --roboto: 'Roboto', 'Arial';
+    --title: 'PT Serif', 'Georgia';
+    --text: 'Roboto', 'Arial';
+
+    /* colors */
+    --border: #f5f5f5;
+    --active-border: #adffda;
 
     --font-smooth: {
         font-smoothing: antialiased;
