--- a/src/containers/App/style.pcss
+++ b/src/containers/App/style.pcss
@@ -1,15 +1,32 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Serif&subset=cyrillic');
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,900');
-
 @import "../../public/css/variables.pcss";
+
+@font-face {
+  font-family: "bandera";
+  src: url('../../public/font/bandera.woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "gerbera";
+  src: url('../../public/font/Gerbera.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "gerbera";
+  src: url('../../public/font/Gerbera_Light.otf');
+  font-weight: 300;
+  font-style: normal;
+}
 
 body {
   font-family: var(--text);
+  height: 100%;
 }
 
 .app {
-  width: 820px;
-  margin: 40px auto;
   font-family: var(--text);
 }
 
