add aside component

--- a/src/containers/App/style.pcss
+++ b/src/containers/App/style.pcss
@@ -24,6 +24,10 @@
 body {
   font-family: var(--text);
   height: 100%;
+  font-smoothing: antialiased;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -webkit-overflow-scrolling: touch;
 }
 
 .app {
