--- a/src/components/Header/style.pcss
+++ b/src/components/Header/style.pcss
@@ -4,6 +4,7 @@
   position: absolute;
   top: 80px;
   @apply --width;
+  z-index: 99999;
 
   &.black {
     .wrapper {
@@ -63,6 +64,43 @@
 
           &.active, &:hover {
             opacity: 0.4;
+          }
+        }
+      }
+
+      .burger {
+        width: 36px;
+        height: 36px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+
+        &:hover {
+          div {
+            span {
+              &:nth-child(1){
+                transform: translate(0, -3px);
+              }
+  
+              &:nth-child(3){
+                transform: translate(0, 3px);
+              }
+            }
+          }
+        }
+
+        span {
+          width: 36px;
+          height: 2px;
+          background-color: #fff;
+          display: block;
+          margin: auto;
+          margin-bottom: 5px;
+          transition: all .3s ease;
+
+          &:last-child {
+            margin-bottom: 0;
           }
         }
       }
