--- a/src/containers/About/style.pcss
+++ b/src/containers/About/style.pcss
@@ -18,6 +18,14 @@
 
   .wrapper {
     padding-top: 240px;
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 0.6s cubic-bezier(0, 0.3, 0.05, 0.93);
+
+    &.loader {
+      transform: translateY(25px);
+      opacity: 0;
+    }
 
     h1 {
       font-family: 'bandera';
