--- a/src/containers/About/style.pcss
+++ b/src/containers/About/style.pcss
@@ -43,6 +43,14 @@
       font-family: 'gerbera';
       font-weight: 300;
       max-width: 740px;
+
+      a {
+        text-decoration: none;
+        border-bottom: 1px solid;
+        color: #fff;
+
+        
+      }
     }
 
     .number {
@@ -55,6 +63,15 @@
       .item {
         margin-bottom: 50px;
         width: 205px;
+
+        svg {
+          height: 48px;
+          margin-bottom: 10px;
+
+          * {
+            fill: #fff!important;
+          }
+        }
 
         strong {
           display: block;
